# DjangoJsonFieldDataManager

./: Makefile  README.md  pyproject.toml
config/: settings.py  urls.py
docs/: getting_started.md
jsondata_manager/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
jsondata_manager/migrations/: 0001_initial.py  0002_allowedkey_expected_values.py  0003_allowedkey_input_type.py
sample_app1/: admin.py  apps.py  models.py  urls.py  views.py
sample_app1/migrations/: 0001_initial.py
sample_app2/: admin.py  models.py
sample_app2/migrations/: 0001_initial.py
test_frontend/: README.md  package-lock.json  package.json
test_frontend/src/: App.vue
